# promptwar3

./: .env.example  CHANGELOG.md  LICENSE  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/carbon/: calculator.py
backend/app/insights/: gemini.py  rules.py
backend/app/repository/: firestore_repo.py
backend/tests/: conftest.py  test_gemini.py  test_memory_repo.py  test_spa.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/components/: CalculatorForm.test.tsx  CalculatorForm.tsx  ResultBreakdown.tsx
frontend/src/styles/: theme.css
