[project]
name = "carbon-platform-backend"
version = "1.1.0"
description = "Carbon Footprint Awareness Platform — FastAPI backend"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage is a hard gate: the build fails if it drops below 90%.
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=90"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "PLC", "TRY", "EM", "COM", "TCH", "B"]
ignore = [
    "S101",    # assert statements are standard in pytest tests
    "SLF001",  # private member access is fine in tests
    "PGH003",  # type: ignore without specific code — acceptable
    "BLE001",  # catching Exception is intentional in service layer (fire-and-forget)
    "TRY003",  # long exception messages are acceptable here
    "EM101",   # string literal in exception is acceptable here
    "TCH001",  # type-checking imports cause runtime issues with our pattern
    "TCH003",  # same as TCH001 for stdlib
    "B008",    # Depends() in defaults is standard FastAPI pattern
    "PT018",   # compound assertions are fine in simple tests
    "E501",    # line length handled by formatter
    "COM812",  # trailing commas handled by formatter
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "SLF001", "PT018", "COM812"]

[tool.mypy]
# Strict static type checking for the application code.
strict = true
files = ["app"]
python_version = "3.10"
# Pydantic ships a mypy plugin that understands model fields and validators.
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Google SDKs are imported lazily and ship without complete type stubs.
module = ["google.*", "google.cloud.*"]
ignore_missing_imports = true
